@@ -256,6 +256,14 @@ The getcwd() function copies an absolute pathname of the current working directo
 
 See the detail of the L<getcwd|https://linux.die.net/man/2/getcwd> function in the case of Linux.
 
+=head2 realpath
+
+  static method realpath : string ($path : string, $resolved_path : mutable string);
+
+realpath() expands all symbolic links and resolves references to /./, /../ and extra '/' characters in the null-terminated string named by path to produce a canonicalized absolute pathname. The resulting pathname is stored as a null-terminated string, up to a maximum of PATH_MAX bytes, in the buffer pointed to by resolved_path. The resulting path will have no symbolic link, /./ or /../ components.
+
+See the detail of the L<realpath|https://linux.die.net/man/3/realpath> function in the case of Linux.
+
 =head2 chdir
 
   static method chdir : int ($path : string);
