@@ -60,7 +60,9 @@ class Sys::IO {
   native static method rename : int ($oldpath : string, $newpath : string);
 
   native static method getcwd : string ($buf : mutable string, $size : int);
-  
+
+  native static method realpath : string ($path : string, $resolved_path : mutable string);
+
   native static method chdir : int ($path : string);
   
   native static method chmod : int ($path : string, $mode :int);
